--- a/src/components/Friend_Adder/Friend_Adder.css
+++ b/src/components/Friend_Adder/Friend_Adder.css
@@ -3,13 +3,13 @@
 .friend_adder_body {
     background-color: #1F2833;
     color: #66FCF1;
-    height: 90vh;
+    height: auto;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    overflow: auto;
+    min-height: 90vh;
     font-family: 'Orbitron', cursive;
 }
 
@@ -23,7 +23,7 @@
     justify-content: space-around;
     align-items: center;
     border-radius: 10px;
-    margin: 20px;
+    margin-top: 5vh;
     font-family: 'Orbitron', cursive;
 }
 
@@ -38,7 +38,7 @@
 }
 
 .map_friends_to_show {
-    margin-top: 50px;
+    margin-top: 8vh;
     display: flex;
     flex-direction: column;
     align-items: center;
