--- a/src/components/Friend_Requests/Friend_Requests.css
+++ b/src/components/Friend_Requests/Friend_Requests.css
@@ -1,9 +1,9 @@
 .friend_request_body {
-    height: 90vh;
-    width: 100vw;
+    min-height: 90vh;
+    width: 100%;
     background-color: #1F2833;
     font-family: 'Orbitron', cursive;
-    overflow: auto;
+    height: auto;
     color:#66FCF1;
     display: flex;
     flex-direction: column;
@@ -14,11 +14,11 @@
 }
 
 .no_friend_request_body {
-    height: 90vh;
-    width: 100vw;
+    min-height: 90vh;
+    width: 100%;
     background-color: #1F2833;
     font-family: 'Orbitron', cursive;
-    overflow: auto;
+    height: auto;
     color:#66FCF1;
     display: flex;
     flex-direction: column;
