--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,7 +2,7 @@
 
 .home_page {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: #1F2833;
     overflow: hidden;
 }
